# concept-nodes

./: .gitignore  .gitmodules  README.md  main.py  main_ros.py  pyproject.toml  ros_local_perception.py  ros_scene_graph.py  visualizer.py
concept_graphs/: seed.py  utils.py
concept_graphs/mapping/: Object.py  ObjectMap.py  Segment.py  SegmentHeap.py  View.py  ViewHeap.py  utils.py
concept_graphs/perception/: PerceptionPipeline.py  rgbd_to_pcd.py
concept_graphs/viz/: object_pcd.py  segmentation.py  utils.py
concept_graphs/vlm/: ImageCaptioner.py  OpenAICaptioner.py  OpenAITagger.py
conf/: main.yaml  main_ros.yaml  ros_local_perception.yaml  ros_scene_graph.yaml  visualizer.yaml
conf/algo/: CG.yaml  CGDetector.yaml  CGOpenlex.yaml  CGPlusDetector.yaml  base.yaml
conf/dataset/: HM3D.yaml  ProcTHOR.yaml  RGBD.yaml  ROS.yaml  Replica.yaml  Replica_low.yaml  Scannetpp.yaml
conf/experiment/: base.yaml  replica.yaml  replica_grid_centroid.yaml  replica_grid_chamferdist.yaml  replica_heavy.yaml  replica_heavy_comb.yaml  replica_max.yaml  replica_max_comb.yaml  replica_yolo.yaml  replica_yolo_comb.yaml  replica_yolo_overmerged.yaml
conf/ft_extraction/: CLIP.yaml  CLIP_H14.yaml
conf/mapping/: ObjectMap.yaml
conf/paths/: docker.yaml  paths.yaml
conf/perception/: PerceptionPipeline.yaml  perception.yaml
conf/vlm/: OpenAITagger.yaml  (+3 more)
scripts/: geometric_sim.py  graph.py  o3d.py  test_export.py  test_mask_subtract.py  test_segment_heap.py  view_grid.py
test/: chamferdist.py  geometric_sim.py  o3d.py  semantic_sim.py  test_view_heap.py  view_grid.py  yolo.py
(+26 files in other folders)
