[project]
name = "concept-graphs"
version = "0.0.0"
dependencies = [
    "torch",
    "torchvision",
    "open3d",
    "hydra-core",
    "mobile_sam@git+https://github.com/ChaoningZhang/MobileSAM.git",
    "open_clip_torch",
    "ultralytics",
    "openai",
    "numpy<=1.26.4",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black"]


[tool.setuptools]
py-modules = []
